gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail11532.d
version https://git-lfs.github.com/spec/v1
oid sha256:bfc2cf99b9dd3ce41036e59b50b447c8b6f5f1eb0fae24634beb7ca7e2fcc1aa
size 654
